--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Ubuntu', sans-serif;
+  background-color: #eaedef;
+  color: #2e3130;
+  letter-spacing: 2px;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+h1 {
+  font-size: 2.5em;
+  text-shadow: 2px 2px 5px #999191;
 }
