--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,30 @@
   padding: 0;
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
+}
+
+body {
   background-color: #eaedef;
-  color: #2e3130;
+  color: #3c3e41;
   letter-spacing: 2px;
+  height: 100vh;
 }
 
 a {
   text-decoration: none;
   cursor: pointer;
+  color: #3c3e41;
+}
+
+h1,
+h2 {
+  text-shadow: 2px 2px 5px #999191;
 }
 
 h1 {
   font-size: 2.5em;
-  text-shadow: 2px 2px 5px #999191;
+}
+
+h2 {
+  font-size: 2em;
 }
