--- a/src/stylesheets/Calculator.css
+++ b/src/stylesheets/Calculator.css
@@ -1,52 +1,85 @@
-.calculator {
+.cal-container {
+  height: calc(100vh - 15vh);
   display: flex;
-  text-align: center;
-  justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  transform: translate(-50%, -50%);
+  width: 85vw;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
-.container {
-  width: 28em;
+.cal-container h2 {
+  align-self: center;
+  letter-spacing: 5px;
+  font-size: 3em;
+  margin-top: -3em;
+  color: lightgray;
+  text-shadow: 2px 2px 5px #2f2e2e;
+}
+
+.calculator {
+  align-self: center;
+}
+
+.calculator > div {
+  width: 30em;
+  padding: 1em;
+  height: 70vh;
+  display: flex;
+  border-radius: 10px;
+  flex-direction: column;
+  background: linear-gradient(140deg, #cdd3d7db, #eee8e8);
+  box-shadow: 4px 4px 10px #c1c1c1, -4px -4px 10px #fff;
 }
 
 .display {
   width: 100%;
-  background: #80808c;
-  color: white;
-  height: 5em;
-  padding: 1em;
   display: flex;
-  justify-content: flex-end;
+  height: 15vh;
+  padding: 1em;
+  font-size: 2em;
+  font-weight: 700;
+  color: #f94892;
   align-items: center;
+  border-radius: 10px;
+  margin-bottom: 1em;
+  justify-content: flex-end;
+  background-color: #eeeded;
+  text-shadow: 1px 1px 2px #000;
+  box-shadow: inset 4px 4px 4px #c1c1c1, -4px -4px 4px #ddd;
 }
 
 .display > p {
-  font-size: 2em;
+  border-radius: 10px;
 }
 
 .keys {
   width: 100%;
+  height: 100%;
+  gap: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .btn {
-  width: 25%;
-  height: 4.5em;
-  font-size: 1em;
-  background-color: #e6e6e6de;
-  border: 0.1px solid lightgrey;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 600;
+  font-size: 1.1em;
+  border: #c1c1c1;
+  border-radius: 10px;
+  background: #eeeeeea8;
+  box-shadow: 4px 4px 10px #c1c1c1;
+  width: calc(25% - 1em);
 }
 
 .btn:hover {
   cursor: pointer;
-  background-color: #d7d6d6;
+  background-color: #f94892;
+  color: #fff;
+  transition: all 0.5s ease-in;
 }
 
 .btn:nth-child(17) {
-  width: 50%;
+  width: calc(50% - 1em);
 }
 
 .btn:nth-child(4),
@@ -54,7 +87,7 @@
 .btn:nth-child(12),
 .btn:nth-child(16),
 .btn:nth-child(19) {
-  background-color: #ff7600d4;
+  background-color: #f94892;
 }
 
 .btn:nth-child(4):hover,
@@ -62,5 +95,6 @@
 .btn:nth-child(12):hover,
 .btn:nth-child(16):hover,
 .btn:nth-child(19):hover {
-  background-color: #fc892bd4;
+  background-color: #eee;
+  color: #f94892;
 }
